Update discount